# chess-ai

./: .gitignore  ADVANCED_SEARCH_v2.4.md  ANALYSIS_ISSUES.md  BENCHMARK_SUMMARY.md  CHANGELOG_v2.2.md  CLEANUP_GUIDE.md  CMakeLists.txt  COMPARE_ENGINES.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_v2.6.md  CORRECTION_HISTORY_INTEGRATION_COMPLETE.md  CPP_PYTHON_SYNC_ANALYSIS.md  CPP_VS_PYTHON_ANALYSIS.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_SUMMARY.md  EURY_v2.5_IMPROVEMENTS.md  FINAL_CONFIGURATION.md  FIXES_v2.3.0.md  HUONG_DAN_TAI.md  IMPLEMENTATION_SUMMARY_v2.6.md  INTEGRATION_COMPLETE_v2.6.md  LICENSE  MUSIC_GUIDE.md  OPTIMIZATION_v2.2.md  PHAN_TICH_CPP_PYTHON.md  QUICK_INTEGRATION_CPP.md  QUICK_REF_v2.3.0.md  QUICK_REF_v2.4.0.md  QUICK_START_v2.6.md  README.md  README_NEW.md  README_V2.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.6.0.md  RELEASE_v2.5.0.md  RUN_FAST_ENGINE.md  SPEED_OPTIMIZATION_COMPLETE.md  SPEED_OPTIMIZATION_README.md  SPEED_OPTIMIZATION_REPORT.md  STOCKFISH_TECHNIQUES_v2.6.md  (+23 more)
build_new/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  chess_engine.sln  chess_engine.vcxproj  chess_engine.vcxproj.filters
build_new/Release/: chess_engine.exp  chess_engine.lib
build_new/chess_engine.dir/Release/: chess_engine.cp311-win_amd64.pyd.recipe
build_new/chess_engine.dir/Release/chess_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_new/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  pybind11.sln
build_new/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_new/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_new/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: ANALYSIS_MODE_GUIDE.md  ANALYSIS_QUICK_REF.md  ARCHITECTURE_DIAGRAM.md  BUILD_GUIDE.md  BUILD_PROGRESS.md  BUILD_STATUS.md  COMPLETION_REPORT.md  CPP_IMPLEMENTATION_GUIDE.md  DETAILED_ANALYSIS.md  DEVELOPER_GUIDE.md  FINAL_REPORT.md  FIXES_COMPLETED.md  FIX_BUILD_ERROR.md  GAME_CONTROLS_GUIDE.md  GAME_CONTROLS_SUMMARY.md  GUI_FIXES_SUMMARY.md  GUI_IMPROVEMENTS.md  GUI_INTEGRATION_GUIDE.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INDEX.md  NEXT_STEPS.md  OPTIMIZATION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_V2.md  README_OPTIMIZED.md  REFACTORING_SUMMARY.md  RUN_GUIDE.md  SUMMARY.md  TEST_RESULTS.md  TODO.md  VS_INSTALL_GUIDE.md
nnue/: download.bat
src/: chess_engine.cp312-win_amd64.pyd  main.py  test_ai.py
src/ai/: analysis_engine.py  correction_history.py  evaluation.py  evaluation_fast.py  evaluation_optimized.py  minimax.py  minimax_fast.py  minimax_optimized.py  minimax_v2_4.py  minimax_v2_6.py  opening_book.py  order_moves_cython.pyx  stockfish_techniques.py
src/chess_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/docs/: TODO.md  documentation.md
src/engine_cpp/include/: board.h  evaluation.h  movegen.h  search.h  transposition.h  types.h
src/engine_cpp/src/: bindings.cpp  board.cpp  evaluation.cpp  movegen.cpp  search.cpp  transposition.cpp  types.cpp
src/gui/: game_controls.py  gui_improvements.py  main_window.py  main_window_v2.py  theme.json  theme_improved.json
src/gui/components/: __init__.py  analysis_panel.py  board_widget.py  captured_pieces_widget.py  clock_widget.py  control_panel.py  evaluation_bar.py  move_history_widget.py
src/tests/: bai1.py  benchmark_comparison.py  resize.py  test_backgroundMusic.py  test_optimize.py  test_optimized_ai.py
src/utils/: config.py
